# rust

./: .gitignore
.github/actions/mkv-filter-metadata-setup/: action.yml
.github/actions/mkv-subtitle-converter-setup/: action.yml
.github/workflows/: mkv-filter-metadata-ci.yml  mkv-filter-metadata-release.yml  mkv-subtitle-converter-ci.yml  mkv-subtitle-converter-release.yml
file-finder/: .gitignore  File_Finder_Rust.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
file-finder/backend/: tauri.conf.json
file-finder/backend/capabilities/: default.json
file-finder/backend/src/: lib.rs  main.rs
file-finder/docs/: PROJECT_LOG.md
file-finder/frontend/: .prettierignore  eslint.config.js  package.json  vite.config.js
file-finder/frontend/src/: App.svelte  basic.test.ts
file-finder/src/: App.svelte
file-finder/src-tauri/: Cargo.toml  tauri.conf.json
file-finder/src-tauri/capabilities/: default.json
file-finder/src-tauri/src/: lib.rs  main.rs
file-finder/src/routes/: +layout.svelte  +page.svelte
file-finder/src/styles/: app.scss
mkv-filter-metadata/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  START_HERE.md  TESTING.md  layout.scss  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
mkv-filter-metadata/.agents/: AGENTS.md
mkv-filter-metadata/.github/workflows/: ci.yml
mkv-filter-metadata/backend/: Cargo.toml  README.md  tauri.conf.json
mkv-filter-metadata/backend/capabilities/: default.json
mkv-filter-metadata/backend/sidecars/: ffmpeg_and_mkvmerge_links.txt
mkv-filter-metadata/backend/src/: commands.rs  constants.rs  error.rs  history.rs  lib.rs  main.rs  models.rs  process.rs
mkv-filter-metadata/docs/: KNOWLEDGE_GRAPH.md  architecture.md  distribution.md  scaffolding.md  troubleshooting.md
mkv-filter-metadata/docs/adr/: 0001-record-architecture-decisions.md  0001-split-documentation.md  0002-initial-tech-stack.md  0002-split-documentation.md  0003-embedded-binary-sidecars.md  0003-initial-tech-stack.md  0004-embedded-binary-sidecars.md  0004-sqlite-history-cache.md  0005-sqlite-history-cache.md  0006-centralized-ci-setup.md  0007-adaptive-throttling-and-storage-concurrency.md  0008-encoder-aware-concurrency.md  0009-responsive-layout-and-ux-enhancements.md  0010-ipc-magic-string-centralization.md  0011-strict-test-coverage-mandate.md  0012-github-actions-release-pipeline.md
mkv-filter-metadata/frontend/: README.md  check_output.txt  eslint.config.js  knip.json  package.json  svelte.config.js  vite.config.js  vite.config.ts  vitest-setup.js
mkv-filter-metadata/frontend/.svelte-kit/: ambient.d.ts
mkv-filter-metadata/frontend/src/: app.html  env.d.ts
mkv-filter-metadata/scripts/: README.md  download-sidecars.mjs  generate-hashes.mjs
mkv-subtitle-converter/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  START_HERE.md  TESTING.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
mkv-subtitle-converter/.agents/: AGENTS.md
mkv-subtitle-converter/backend/: Cargo.toml  README.md  tauri.conf.json
mkv-subtitle-converter/backend/capabilities/: default.json
mkv-subtitle-converter/backend/src/: commands.rs  constants.rs  error.rs  history.rs  lib.rs  main.rs  models.rs  process.rs
mkv-subtitle-converter/docs/: KNOWLEDGE_GRAPH.md  architecture.md  distribution.md  scaffolding.md  troubleshooting.md
mkv-subtitle-converter/frontend/: .prettierignore  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest-setup.js
mkv-subtitle-converter/scripts/: download-sidecars.mjs  generate-hashes.mjs
(+107 files in other folders)
