[package]
name = "mkv-filter-metadata-rust"
version = "1.0.0"
description = "A powerful batch-processing desktop app for filtering MKV metadata and tracks"
authors = ["Cuates"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mkv_filter_metadata_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-store = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
tokio-util = { version = "0.7" }
walkdir = "2.5"
thiserror = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tauri-plugin-notification = "2.3.3"
strum = { version = "0.26", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] } # rusqlite = bundled: compiles SQLite from source for cross-platform consistency. Expected impact: +30-60s clean compile, +500KB binary. This is intentional.
